--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "rtvideochat",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -19,5 +18,14 @@
     "simple-peer": "^9.11.1",
     "socket.io": "^4.5.4",
     "socket.io-client": "^4.5.4"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AgaYasin/RTVideoChat.git"
+  },
+  "bugs": {
+    "url": "https://github.com/AgaYasin/RTVideoChat/issues"
+  },
+  "homepage": "https://github.com/AgaYasin/RTVideoChat#readme",
+  "description": ""
 }
